# codeverse-hack

./: .gitignore  CLAUDE.md  Dockerfile.frontend  PROJECT_STRUCTURE.md  README.md  SIGNING_SETUP.md  claude_script.py  claude_service.py  docker-compose.yml  env.example  package-lock.json  package.json  pnpm-lock.yaml  schema.md  test_api_endpoint.py
.github/workflows/: release.yml
backend/: .flake8  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  claude_service.py  codeverse.db  config.py  database.py  main.py  pyproject.toml  requirements.txt  run.py  schemas.py  setup_db.py  test_api.py  test_db.py
backend/models/: __init__.py  base.py  chat.py  plan.py  repository.py
backend/routers/: __init__.py  artifacts.py  business.py  chat.py  plan_versions.py  plans.py  repositories.py  transcribe.py
backend/services/: claude_prompts.py  claude_script.py  claude_service.py
backend/tests/: test_api.py  test_api_endpoint.py  test_business_api.py  test_business_flow_sequential.py  test_db.py
backend/tests/utils/: populate_dummy_data.py
scripts/: build-signed-dmg.sh  build.sh  db.sh  dev.sh  setup.sh  transcribe-test.mjs
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
src/components/: Button.tsx  ChatWindow.tsx  LoadingAnimation.tsx  MarkdownEditor.tsx  Modal.tsx  ProjectSidebar.tsx  ResizableLayout.tsx  StatusCard.tsx  TaskOutputPanel.tsx  VoiceRecorder.tsx
src/lib/: AppContext.tsx  api.ts  transcription.ts  types.ts
