[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codeverse-backend"
version = "0.1.0"
description = "CodeVerse Backend - Smart Code Planning with Claude Code"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi==0.116.1",
    "uvicorn[standard]==0.35.0",
    "pydantic==2.11.7",
    "python-multipart==0.0.20",
    "python-jose[cryptography]==3.5.0",
    "passlib[bcrypt]==1.7.4",
    "python-dotenv==1.1.1",
    "sqlalchemy==2.0.42",
    "alembic==1.16.4",
    "aiosqlite==0.21.0",
    "greenlet==3.2.4",
    "requests==2.32.4",
    "claude-code-sdk==0.0.19",
]

[project.optional-dependencies]
dev = [
    "black==25.1.0",
    "flake8==7.3.0",
    "mypy==1.17.1",
    "pre-commit==4.3.0",
    "isort==6.0.1",
    "types-requests==2.32.4.20250809",
    "pytest==8.4.1",
    "pytest-asyncio>=0.21.1",
    "httpx>=0.25.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["tests*"]

[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
  | python_packages
  | migrations
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
known_first_party = ["app", "models", "config"]

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = false
warn_unused_ignores = false
warn_no_return = false
warn_unreachable = true
strict_equality = false
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "passlib.*",
    "jose.*",
    "alembic.*",
    "requests.*",
    "websockets.*",
    "werkzeug.*"
]
ignore_missing_imports = true

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "migrations",
    "build",
    "dist",
    "python_packages"
]
per-file-ignores = [
    "__init__.py:F401"
]
